[project]
name = "DLM2-pipeline"
version = "1.0"
authors = [
  { name="Angelino Blazère"},
]
description = "DustPy Linked to MCFOST and Dark Lane Measurments"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "dustpy",
    "pymcfost"
]

[project.urls]
Homepage = "https://github.com/LimitelessAB/DLM2-pipeline"

